# rcore-ai

./: Cargo.toml  README.md  run.sh
.cargo/: config.toml
src/: console.rs  entry.asm  main.rs  sbi.rs
